--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -72,9 +72,11 @@
         {% when 'rss' %}
           {% assign url = '/feed.xml' | relative_url %}
         {% when 'zhihu' %}
-          {% assign url = 'https://www.zhihu.com/people/' | append: site.zhihu.username %}
-        {% when 'weibo' %}
-          {% assign url = 'https://weibo.com/' | append: site.weibo.username %}
+          {% assign url = 'https://www.zhihu.com/people/' | append: site.social.zhihu %}
+        {% when 'wechat' %}
+          {%- capture url -%}
+            wxid:departbeforedark
+          {%- endcapture -%}
         {% else %}
           {% assign url = entry.url %}
       {% endcase %}
