--- a/_includes/announcement.html
+++ b/_includes/announcement.html
@@ -1,6 +1,6 @@
 <!-- _includes/announcement.html -->
 {% if site.data.announcement %}
-  <div id="announcement-modal" class="modal" tabindex="-1" role="dialog">
+  <div id="announcement-modal" class="modal" tabindex="-1" role="dialog" data-bs-backdrop="static">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
