--- a/_includes/js-selector.html
+++ b/_includes/js-selector.html
@@ -54,42 +54,11 @@
   {% assign urls = urls | append: ',' | append: site.data.origin[type].mermaid.js %}
 {% endif %}
 
-{% include jsdelivr-combine.html urls=urls %}
-
-{% case page.layout %}
-  {% when 'home', 'categories', 'post', 'page' %}
-    {% assign js = page.layout %}
-  {% when 'archives', 'category', 'tag' %}
-    {% assign js = 'misc' %}
-  {% else %}
-    {% assign js = 'commons' %}
-{% endcase %}
-
-{% capture script %}/assets/js/dist/{{ js }}.min.js{% endcapture %}
-<script defer src="{{ script | relative_url }}"></script>
-
-{% if page.math %}
-  <!-- MathJax -->
-  <script>
-    /* see: <https://docs.mathjax.org/en/latest/options/input/tex.html#tex-options> */
-    MathJax = {
-      tex: {
-        /* start/end delimiter pairs for in-line math */
-        inlineMath: [
-          ['$', '$'],
-          ['\\(', '\\)']
-        ],
-        /* start/end delimiter pairs for display math */
-        displayMath: [
-          ['$$', '$$'],
-          ['\\[', '\\]']
-        ]
-      }
-    };
-  </script>
-  <script src="{{ site.data.origin[type].polyfill.js | relative_url }}"></script>
-  <script id="MathJax-script" async src="{{ site.data.origin[type].mathjax.js | relative_url }}"></script>
-{% endif %}
+<!-- 分离 URL 进行调试 -->
+{% assign urls_array = urls | split: ',' %}
+{% for url in urls_array %}
+  <script src="{{ url }}"></script>
+{% endfor %}
 
 {% if jekyll.environment == 'production' %}
   <!-- PWA -->
