--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -135,7 +135,7 @@ refactor: true
 <div class="related-websites-section mt-5">
   <h2>相关网站</h2>
   <div class="related-websites d-flex flex-wrap">
-    {% for site in site.data.related_websites %}
+    {% for site in site.related_websites %}
       <div class="related-website-item text-center m-3">
         <a href="{{ site.url }}" target="_blank">
           <img src="{{ site.image }}" class="rounded-circle" alt="{{ site.name }}" width="100" height="100">
