--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -1601,6 +1601,7 @@ $btn-mb: 0.5rem;
   background: #f8f8f8;
   margin: 0;
 }
+
 .academic-articles {
   display: flex;
   flex-direction: column;
@@ -1611,7 +1612,7 @@ $btn-mb: 0.5rem;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   padding: 1rem;
-  background: #fff;
+  background: #ffffff;
 }
 
 .academic-article-item h2 {
