--- a/_sass/layout/home.scss
+++ b/_sass/layout/home.scss
@@ -261,16 +261,16 @@
       flex: 1 1 calc(20% - 1rem);
       text-align: center;
       padding: 1rem; /* 添加内边距，确保图片和文字之间有足够的间距 */
-      display: flex;
-      flex-direction: column; /* 垂直排列子元素 */
-      align-items: center; /* 子元素居中对齐 */
+      // display: flex;
+      // flex-direction: column; /* 垂直排列子元素 */
+      // align-items: center; /* 子元素居中对齐 */
       
       img {
         width: 100px;
         height: 100px;
         border-radius: 50%;
         object-fit: cover;
-        // margin-bottom: 5rem; /* 增加图片与文字之间的间距 */
+        margin-bottom: -0.5rem; /* 增加图片与文字之间的间距 */
       }
 
       p {
