--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -138,7 +138,8 @@ refactor: true
     {% for site in site.related_websites.friends_classmates %}
       <div class="related-website-item text-center m-3">
         <a href="{{ site.url }}" target="_blank">
-          <img src="{{ site.image }}" class="rounded-circle" alt="{{ site.name }}" width="50" height="50">
+          <img src="{{ site.image }}" class="rounded-circle" alt="{{ site.name }}" width="100" height="100">
+          <div style="height: 1rem;"></div> <!-- 添加一个空的 div 元素作为分隔符 -->
           <p>{{ site.name }}</p>
         </a>
       </div>
@@ -152,7 +153,8 @@ refactor: true
     {% for site in site.related_websites.professors_instructors %}
       <div class="related-website-item text-center m-3">
         <a href="{{ site.url }}" target="_blank">
-          <img src="{{ site.image }}" class="rounded-circle" alt="{{ site.name }}" width="50" height="50">
+          <img src="{{ site.image }}" class="rounded-circle" alt="{{ site.name }}" width="100" height="100">
+          <div style="height: 1rem;"></div> <!-- 添加一个空的 div 元素作为分隔符 -->
           <p>{{ site.name }}</p>
         </a>
       </div>
