--- a/_sass/layout/home.scss
+++ b/_sass/layout/home.scss
@@ -258,14 +258,10 @@
     gap: 1rem;
 
     .related-website-item {
-      flex: 1 1 calc(20% - 1rem);
+      flex: 1 1 calc(33.333% - 1rem); /* 调整每行显示三个项目 */
       text-align: center;
-      padding: 1rem; /* 添加内边距，确保图片和文字之间有足够的间距 */
-      // display: flex;
-      // flex-direction: column; /* 垂直排列子元素 */
-      // align-items: center; /* 子元素居中对齐 */
-      
-      img {
+
+      img.related-website-img {
         width: 100px;
         height: 100px;
         border-radius: 50%;
