--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -118,7 +118,7 @@ refactor: true
   {% include post-paginator.html %}
 {% endif %}
 
-<!-- Gallery Section -->
+<!-- Gallery Section
 <div class="gallery-section mt-5">
   <h2>画廊</h2>
   <div class="gallery">
@@ -129,7 +129,7 @@ refactor: true
       </div>
     {% endfor %}
   </div>
-</div>
+</div> -->
 
 <!-- Related Websites Section -->
 <div class="related-websites-section mt-5">
