加载更多mathjax宏包

--- a/_includes/js-selector.html
+++ b/_includes/js-selector.html
@@ -86,7 +86,9 @@
         displayMath: [
           ['$$', '$$'],
           ['\\[', '\\]']
-        ]
+        ],
+        /* Load the bm package for bold math */
+        packages: {'[+]': ['amscd', 'color', 'mhchem', 'physics', 'cancel', 'mathtools', 'bm']}
       }
     };
   </script>
