--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -44,6 +44,12 @@
       </li>
       <!-- .nav-item -->
     {% endfor %}
+    <li class="nav-item">
+      <a href="{{ '/toMylover.html' | relative_url }}" class="nav-link">
+        <i class="fa-fw fas fa-smile"></i>
+        <span>Happy New Year</span>
+      </a>
+    </li>
   </ul>
   <!-- ul.nav.flex-column -->
 
