--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,56 +16,45 @@ refactor: true
 {% assign pinned_num = pinned.size | minus: offset %}
 
 {% if pinned_num > 0 %}
-  {% for i in (offset..pinned.size) limit: pinned_num %}
-    {% assign posts = posts | push: pinned[i] %}
-  {% endfor %}
+{% for i in (offset..pinned.size) limit: pinned_num %}
+{% assign posts = posts | push: pinned[i] %}
+{% endfor %}
 {% else %}
-  {% assign pinned_num = 0 %}
+{% assign pinned_num = 0 %}
 {% endif %}
 
 <!-- Get default posts -->
 
 {% assign default_beg = offset | minus: pinned.size %}
 
-{% if default_beg < 0 %}
-  {% assign default_beg = 0 %}
-{% endif %}
-
-{% assign default_num = paginator.posts | size | minus: pinned_num %}
-{% assign default_end = default_beg | plus: default_num | minus: 1 %}
-
-{% if default_num > 0 %}
+{% if default_beg < 0 %} {% assign default_beg=0 %} {% endif %} {% assign default_num=paginator.posts | size | minus:
+  pinned_num %} {% assign default_end=default_beg | plus: default_num | minus: 1 %} {% if default_num> 0 %}
   {% for i in (default_beg..default_end) %}
-    {% assign posts = posts | push: default[i] %}
+  {% assign posts = posts | push: default[i] %}
   {% endfor %}
-{% endif %}
+  {% endif %}
 
-{% if paginator.total_pages > 1 %}
+  {% if paginator.total_pages > 1 %}
   {% assign has_paginator = true %}
-{% endif %}
+  {% endif %}
 
-<div
-  id="post-list"
-  {% unless has_paginator %}
-    class="mb-5"
-  {% endunless %}
->
-  {% for post in posts %}
+  <div id="post-list" {% unless has_paginator %} class="mb-5" {% endunless %}>
+    {% for post in posts %}
     <a href="{{ post.url | relative_url }}" class="card-wrapper">
       <div class="card post-preview flex-md-row-reverse">
         {% if post.image %}
-          {% if post.image.lqip %}
-            {% capture lqip %}lqip="{{ post.image.lqip }}"{% endcapture %}
-          {% endif %}
+        {% if post.image.lqip %}
+        {% capture lqip %}lqip="{{ post.image.lqip }}"{% endcapture %}
+        {% endif %}
 
-          {% assign src = post.image.path | default: post.image %}
-          {% unless src contains '//' %}
-            {% assign src = post.img_path | append: '/' | append: src | replace: '//', '/' %}
-          {% endunless %}
+        {% assign src = post.image.path | default: post.image %}
+        {% unless src contains '//' %}
+        {% assign src = post.img_path | append: '/' | append: src | replace: '//', '/' %}
+        {% endunless %}
 
-          {% assign alt = post.image.alt | default: 'Preview Image' %}
+        {% assign alt = post.image.alt | default: 'Preview Image' %}
 
-          <img src="{{ src }}" w="17" h="10" alt="{{ alt }}" {{ lqip }}>
+        <img src="{{ src }}" w="17" h="10" alt="{{ alt }}" {{ lqip }}>
         {% endif %}
 
         <div class="card-body d-flex flex-column">
@@ -88,21 +77,21 @@ refactor: true
 
               <!-- categories -->
               {% if post.categories.size > 0 %}
-                <i class="far fa-folder-open fa-fw me-1"></i>
-                <span class="categories">
-                  {% for category in post.categories %}
-                    {{ category }}
-                    {%- unless forloop.last -%},{%- endunless -%}
-                  {% endfor %}
-                </span>
+              <i class="far fa-folder-open fa-fw me-1"></i>
+              <span class="categories">
+                {% for category in post.categories %}
+                {{ category }}
+                {%- unless forloop.last -%},{%- endunless -%}
+                {% endfor %}
+              </span>
               {% endif %}
             </div>
 
             {% if post.pin %}
-              <div class="pin ms-1">
-                <i class="fas fa-thumbtack fa-fw"></i>
-                <span>{{ site.data.locales[lang].post.pin_prompt }}</span>
-              </div>
+            <div class="pin ms-1">
+              <i class="fas fa-thumbtack fa-fw"></i>
+              <span>{{ site.data.locales[lang].post.pin_prompt }}</span>
+            </div>
             {% endif %}
           </div>
           <!-- .post-meta -->
@@ -110,15 +99,15 @@ refactor: true
         <!-- .card-body -->
       </div>
     </a>
-  {% endfor %}
-</div>
-<!-- #post-list -->
+    {% endfor %}
+  </div>
+  <!-- #post-list -->
 
-{% if has_paginator %}
+  {% if has_paginator %}
   {% include post-paginator.html %}
-{% endif %}
+  {% endif %}
 
-<!-- Gallery Section
+  <!-- Gallery Section
 <div class="gallery-section mt-5">
   <h2>画廊</h2>
   <div class="gallery">
@@ -131,33 +120,33 @@ refactor: true
   </div>
 </div> -->
 
-<!-- Related Websites Section -->
-<div class="related-websites-section mt-5">
-  <h2>Friends & Classmates</h2>
-  <div class="related-websites d-flex flex-wrap">
-    {% for site in site.related_websites.friends_classmates %}
+  <!-- Related Websites Section -->
+  <div class="related-websites-section mt-5">
+    <h2>Friends & Classmates</h2>
+    <div class="related-websites d-flex flex-wrap">
+      {% for site in site.related_websites.friends_classmates %}
       <div class="related-website-item text-center m-3">
         <a href="{{ site.url }}" target="_blank">
-          <img src="{{ site.image }}" class="related-website-img" alt="{{ site.name }}" width="100" height="100">
+          <img src="{{ site.image }}" class="related-website-img" alt="{{ site.name }}" width="150" height="150">
           <!-- <div style="height: 1rem;"></div> 添加一个空的 div 元素作为分隔符 -->
           <p>{{ site.name }}</p>
         </a>
       </div>
-    {% endfor %}
+      {% endfor %}
+    </div>
   </div>
-</div>
 
-<div class="related-websites-section mt-5">
-  <h2>Professors & Instructors</h2>
-  <div class="related-websites d-flex flex-wrap">
-    {% for site in site.related_websites.professors_instructors %}
+  <div class="related-websites-section mt-5">
+    <h2>Professors & Instructors</h2>
+    <div class="related-websites d-flex flex-wrap">
+      {% for site in site.related_websites.professors_instructors %}
       <div class="related-website-item text-center m-3">
         <a href="{{ site.url }}" target="_blank">
-          <img src="{{ site.image }}" class="related-website-img" alt="{{ site.name }}" width="100" height="100">
+          <img src="{{ site.image }}" class="related-website-img" alt="{{ site.name }}" width="150" height="150">
           <!-- <div style="height: 1rem;"></div> 添加一个空的 div 元素作为分隔符 -->
           <p>{{ site.name }}</p>
         </a>
       </div>
-    {% endfor %}
+      {% endfor %}
+    </div>
   </div>
-</div>
