--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -112,7 +112,7 @@ refactor: true
   {% if pinned_image %}
   <div class="gallery-section mt-5">
     <h2><i class="fas fa-images me-2"></i>画廊</h2>
-    <a href="{{ '/tabs/gallery/' | relative_url }}" class="gallery-pinned-home">
+    <a href="{{ '/gallery/' | relative_url }}" class="gallery-pinned-home">
       <img src="{{ pinned_image.url }}" alt="{{ pinned_image.alt }}">
       <div class="gallery-pinned-overlay">
         <span>查看更多 <i class="fas fa-arrow-right"></i></span>
